[gd_scene load_steps=12 format=3 uid="uid://csygn7thpv4no"]

[ext_resource type="Texture2D" uid="uid://d3akgpp4ga7tl" path="res://sprites/soot/SootAnimationsAtlas.png" id="1_g3kk3"]
[ext_resource type="Script" path="res://scripts/game_entities/soot_player.gd" id="1_tfbbf"]
[ext_resource type="Texture2D" uid="uid://ec7r8yl4x46k" path="res://sprites/icons/triangle_icon.png" id="2_rn3sn"]

[sub_resource type="LabelSettings" id="LabelSettings_if046"]
font_size = 40

[sub_resource type="AtlasTexture" id="AtlasTexture_pu3jx"]
atlas = ExtResource("1_g3kk3")
region = Rect2(13, 509, 70, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifhcv"]
atlas = ExtResource("1_g3kk3")
region = Rect2(10, 12, 199, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2wub"]
atlas = ExtResource("1_g3kk3")
region = Rect2(205, 241, 111, 75)

[sub_resource type="Animation" id="Animation_4pxll"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/LegsSprite:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(13, 509, 70, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/BodySprite:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(10, 12, 199, 213)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/EyesSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(205, 241, 111, 75)]
}

[sub_resource type="Animation" id="Animation_0qgjn"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/LegsSprite:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(13, 509, 70, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/BodySprite:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(0, 0, 0, 0, 0),
"update": 0,
"values": [Rect2(10, 12, 199, 213), Rect2(208, 12, 199, 213), Rect2(405, 12, 199, 213), Rect2(603, 12, 199, 213), Rect2(805, 12, 199, 213)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/EyesSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(205, 241, 111, 75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6skqy"]
_data = {
"RESET": SubResource("Animation_4pxll"),
"idle": SubResource("Animation_0qgjn")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4mecc"]
radius = 26.0
height = 120.0

[node name="SootPlayer" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
motion_mode = 1
script = ExtResource("1_tfbbf")

[node name="PlayerData" type="Node2D" parent="."]

[node name="TeamMarkerSprite" type="Sprite2D" parent="PlayerData"]
texture = ExtResource("2_rn3sn")
offset = Vector2(0, -141)

[node name="NameLabel" type="Label" parent="PlayerData"]
offset_left = -88.0
offset_top = -228.0
offset_right = 84.0
offset_bottom = -173.0
text = "Kapron"
label_settings = SubResource("LabelSettings_if046")
horizontal_alignment = 1

[node name="Sprites" type="Node2D" parent="."]

[node name="LegsSprite" type="Sprite2D" parent="Sprites"]
modulate = Color(0.60933, 0.60933, 0.60933, 1)
position = Vector2(0, 134)
texture = SubResource("AtlasTexture_pu3jx")

[node name="BodySprite" type="Sprite2D" parent="Sprites"]
modulate = Color(0.60933, 0.60933, 0.60933, 1)
texture = SubResource("AtlasTexture_ifhcv")

[node name="EyesSprite" type="Sprite2D" parent="Sprites"]
texture = SubResource("AtlasTexture_l2wub")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6skqy")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 188)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4mecc")
